--- a/codeif/templates/details.html
+++ b/codeif/templates/details.html
@@ -16,25 +16,17 @@
       <a href="{% url 'delete' i.pk %}" >delete post</a>
       <a style="margin-left: 10%;" href="{% url 'update' i.pk %}" >update post</a>
     {% endif %}
+    
+    <form method="POST" action="{% url 'like' i.id %}">
+      {% csrf_token %}
+      <div class="btn-group" role="group" aria-label="Basic example" style="float: right; margin-top: -2%; margin-right: 2%;">
+      {% if user.is_authenticated %}
+        <button type="submit" class="btn btn-primary" name="post_id" value="{{ i.id }}"><b style="color: black;">{{ i.Liked }} </b> like</button>
+      {% endif %}
+      </div>
 
-  <form action="{% url 'like' i.pk %}" method="POST">
-		{% csrf_token %}
-	<!-- Like Section -->
-	{% if user.is_authenticated %}
-		{% if liked %}
-			<button type="submit", name="post_id", value="{{ post.id }}", class="btn btn-danger btn-sm">Unlike</button> 
-		{% else %}	
-			<button type="submit", name="post_id", value="{{ post.id }}", class="btn btn-primary btn-sm">Like</button> 
-
-		{% endif %}
-	{% else %}
-		<!-- <small><a href="{% url 'login' %}">Login</a> to like</small> -->
-    <p>Login to Like</p>
-	{% endif %}
-	
-		- {{ total_likes }} Likes
+    </form>
   {% endfor %}
-	</form>
 
 </body>
 </html>
